Fixed bug with project card scroll bar on mobile shrinking cards instead of scrolling

--- a/src/app/Components/Description.module.css
+++ b/src/app/Components/Description.module.css
@@ -8,7 +8,7 @@
     overflow: hidden;
     padding: 25px;
 
-    border-radius: 20px;
+    border-radius: 15px;
     border: solid white 5px;
     border-style: ridge;
 
